namespaces/live.cloud-platform.service.justice.gov.uk/grc-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grc-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMCTS"
    cloud-platform.justice.gov.uk/slack-channel: "pet"
    cloud-platform.justice.gov.uk/application: "Gender Recognition App"
    cloud-platform.justice.gov.uk/owner: "pet: pet@hmcts.net"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/cabinetoffice/grc-app/"
    cloud-platform.justice.gov.uk/team-name: "pet"
    cloud-platform.justice.gov.uk/review-after: ""
